--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activity.MainActivity"
-            android:theme="@style/TransStatusBarTheme"></activity>
-
-        <service
-            android:name=".service.ComService"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity android:name=".activity.DeviceListActivity" />
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +24,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginSettingActivity" android:theme="@style/DialogActivity"></activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:theme="@style/TransStatusBarTheme" />
+
+        <service
+            android:name=".service.ComService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.DetailActivity" />
+        <activity
+            android:name=".activity.LoginSettingActivity"
+            android:theme="@style/DialogActivity" />
+        <activity
+            android:name=".activity.DataLogSettingActivity"
+            android:theme="@style/DialogActivity" ></activity>
     </application>
 
 </manifest>
