--- a/app/src/main/res/raw/device_config.json
+++ b/app/src/main/res/raw/device_config.json
@@ -6,15 +6,16 @@
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":["Ua","Ub","Uc"],
-      "Grid":["Ip","Up"],
+      "Grid":["Iavg","Ip","Uavg","Up"],
       "Power":[],
       "Energy":[],
       "Harmonic":[]
     },
     "Protect":[
+      {"Name":"Ie","Items":[]},
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
-      {"Name":"Switch","Items":["Short","Instant","","Ground","I2tsd","I2tg"]},
+      {"Name":"Switch","Items":["Isd","Ii","","Ig","Tsd","Tg"]},
       {"Name":"Ir","Items":[0.4,0.5,0.6,0.65,0.7,0.8,0.9,0.95,1]},
       {"Name":"Tr","Items":[5,10,20,29,41,83,125,167,250]},
       {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10]},
@@ -32,15 +33,16 @@
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":["Ua","Ub","Uc"],
-      "Grid":["Ip","Up"],
+      "Grid":["Iavg","Ip","Uavg","Up"],
       "Power":[],
       "Energy":[],
       "Harmonic":[]
     },
     "Protect":[
+      {"Name":"Ie","Items":[]},
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
-      {"Name":"Switch","Items":["Short","Instant","","Ground","I2tsd","I2tg"]},
+      {"Name":"Switch","Items":["Isd","Ii","","Ig","Tsd","Tg"]},
       {"Name":"Ir","Items":[0.4,0.5,0.6,0.65,0.7,0.8,0.9,0.95,1]},
       {"Name":"Tr","Items":[0.5,1,2,4,8,12,16,20,24]},
       {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10]},
@@ -58,15 +60,16 @@
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":["Ua","Ub","Uc","Uab","Ubc","Uca"],
-      "Grid":["Ip","Up","T","F","Phase"],
+      "Grid":["Iavg","Ip","Uavg","Up","T","F","Phase"],
       "Power":["P","Q","S","COS"],
       "Energy":["EP","EQ","ES","EPin","EPout","EQin","EQout"],
       "Harmonic":["THD"]
     },
     "Protect":[
+      {"Name":"Ie","Items":[]},
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
-      {"Name":"Switch","Items":["","Short","Instant","Ground","I2tsd","I2tg"]},
+      {"Name":"Switch","Items":["","Isd","Ii","Ig","Tsd","Tg"]},
       {"Name":"Ir","Items":[0.4,0.005,1]},
       {"Name":"Tr","Items":[0.5,1,2,4,8,12,16,20,24]},
       {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10]},
@@ -84,15 +87,16 @@
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":[],
-      "Grid":["Ip"],
+      "Grid":["Iavg","Ip"],
       "Power":[],
       "Energy":[],
       "Harmonic":[]
     },
     "Protect":[
+      {"Name":"Ie","Items":[]},
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
-      {"Name":"Switch","Items":["Short","Instant","","Ground","I2tsd","I2tg"]},
+      {"Name":"Switch","Items":["","","","","","","","","Isd","Ii","","Ig","Tsd","Tg"]},
       {"Name":"Ir","Items":[0.4,0.44,0.48,0.52,0.56,0.6,0.64,0.68,0.72,0.76,0.8,0.85,0.9,0.95,1]},
       {"Name":"Tr","Items":[20,40,60,80,160]},
       {"Name":"Isd","Items":[2,3,4,5,6,7,8,9,10]},
