--- a/app/src/main/res/raw/device_config.json
+++ b/app/src/main/res/raw/device_config.json
@@ -16,13 +16,13 @@
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
       {"Name":"Switch","Items":["Isd","Ii","","Ig","Tsd","Tg"]},
-      {"Name":"Ir","Items":[0.4,0.5,0.6,0.65,0.7,0.8,0.9,0.95,1]},
-      {"Name":"Tr","Items":[5,10,20,29,41,83,125,167,250]},
-      {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10]},
-      {"Name":"Tsd","Items":[0.1,0.2,0.3,0.4]},
-      {"Name":"Ii","Items":[2,4,6,8,10,11,12,15]},
-      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1]},
-      {"Name":"Tg","Items":[0.1,0.2,0.4,0.8]}
+      {"Name":"Ir","Items":[0.4,0.5,0.6,0.65,0.7,0.8,0.9,0.95,1],"Unit":"Ie"},
+      {"Name":"Tr","Items":[5,10,20,29,41,83,125,167,250],"Unit":"s"},
+      {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10,"off"],"Unit":"Ir"},
+      {"Name":"Tsd","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"},
+      {"Name":"Ii","Items":[2,4,6,8,10,11,12,15,"off"],"Unit":"Ie"},
+      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"Ie"},
+      {"Name":"Tg","Items":["(I2t on)0.8","(I2t on)0.4","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.4","(I2t off)0.8"],"Unit":"s"}
     ],
     "Control":["State","FarCtrl"]
   },
@@ -43,13 +43,13 @@
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
       {"Name":"Switch","Items":["Isd","Ii","","Ig","Tsd","Tg"]},
-      {"Name":"Ir","Items":[0.4,0.5,0.6,0.65,0.7,0.8,0.9,0.95,1]},
-      {"Name":"Tr","Items":[0.5,1,2,4,8,12,16,20,24]},
-      {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10]},
-      {"Name":"Tsd","Items":[-0.4,-0.3,-0.2,-0.1,0,0.1,0.2,0.3,0.4]},
-      {"Name":"Ii","Items":[2,4,6,8,10,11,12,15]},
-      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1]},
-      {"Name":"Tg","Items":[-0.4,-0.3,-0.2,-0.1,0,0.1,0.2,0.3,0.4]}
+      {"Name":"Ir","Items":[0.4,0.5,0.6,0.65,0.7,0.8,0.9,0.95,1],"Unit":"Ie"},
+      {"Name":"Tr","Items":[0.5,1,2,4,8,12,16,20,24],"Unit":"s"},
+      {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10,"off"],"Unit":"Ir"},
+      {"Name":"Tsd","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"},
+      {"Name":"Ii","Items":[2,4,6,8,10,11,12,15,"off"],"Unit":"Ie"},
+      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"Ie"},
+      {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
     "Control":["State","FarCtrl"]
   },
@@ -70,13 +70,13 @@
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
       {"Name":"Switch","Items":["","Isd","Ii","Ig","Tsd","Tg"]},
-      {"Name":"Ir","Items":[0.4,0.005,1]},
-      {"Name":"Tr","Items":[0.5,1,2,4,8,12,16,20,24]},
-      {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10]},
-      {"Name":"Tsd","Items":[-0.4,-0.3,-0.2,-0.1,0,0.1,0.2,0.3,0.4]},
-      {"Name":"Ii","Items":[2,4,6,8,10,11,12,15]},
-      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1]},
-      {"Name":"Tg","Items":[-0.4,-0.3,-0.2,-0.1,0,0.1,0.2,0.3,0.4]}
+      {"Name":"Ir","Items":[0.4,0.005,1],"Unit":"Ie"},
+      {"Name":"Tr","Items":[0.5,1,2,4,8,12,16,20,24],"Unit":"s"},
+      {"Name":"Isd","Items":[1.5,2,2.5,3,4,5,6,8,10,"off"],"Unit":"Ir"},
+      {"Name":"Tsd","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"},
+      {"Name":"Ii","Items":[2,4,6,8,10,11,12,15,"off"],"Unit":"Ie"},
+      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"Ie"},
+      {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
     "Control":["State","FarCtrl"]
   },
@@ -97,13 +97,13 @@
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
       {"Name":"Switch","Items":["","","","","","","","","Isd","Ii","","Ig","Tsd","Tg"]},
-      {"Name":"Ir","Items":[0.4,0.44,0.48,0.52,0.56,0.6,0.64,0.68,0.72,0.76,0.8,0.85,0.9,0.95,1]},
-      {"Name":"Tr","Items":[20,40,60,80,160]},
-      {"Name":"Isd","Items":[2,3,4,5,6,7,8,9,10]},
-      {"Name":"Tsd","Items":[0.1,0.2,0.3,0.4]},
-      {"Name":"Ii","Items":[1.5,2,2.5,3,3.5,4,4.5,5,5.5,6,6.5,7,7.5,8,8.5,9,9.5,10,11,12]},
-      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1]},
-      {"Name":"Tg","Items":[0.1,0.2,0.3,0.4]}
+      {"Name":"Ir","Items":[0.4,0.44,0.48,0.52,0.56,0.6,0.64,0.68,0.72,0.76,0.8,0.85,0.9,0.95,1],"Unit":"xIe"},
+      {"Name":"Tr","Items":[20,40,60,80,160],"Unit":"s"},
+      {"Name":"Isd","Items":[2,3,4,5,6,7,8,9,10,"off"],"Unit":"xIr"},
+      {"Name":"Tsd","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"},
+      {"Name":"Ii","Items":[1.5,2,2.5,3,3.5,4,4.5,5,5.5,6,6.5,7,7.5,8,8.5,9,9.5,10,11,12,"off"],"Unit":"xIe"},
+      {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"xIe"},
+      {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
     "Control":["State","FarCtrl"]
   }
