--- a/app/src/main/res/raw/device_config.json
+++ b/app/src/main/res/raw/device_config.json
@@ -24,7 +24,7 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"Ie"},
       {"Name":"Tg","Items":["(I2t on)0.8","(I2t on)0.4","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.4","(I2t off)0.8"],"Unit":"s"}
     ],
-    "Control":["State","FarCtrl"]
+    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
   },
   {
     "Type":"A2",
@@ -51,7 +51,7 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"Ie"},
       {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
-    "Control":["State","FarCtrl"]
+    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
   },
   {
     "Type":"A3",
@@ -78,7 +78,7 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"Ie"},
       {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
-    "Control":["State","FarCtrl"]
+    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
   },
   {
     "Type":"M2",
@@ -105,6 +105,6 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"xIe"},
       {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
-    "Control":["State","FarCtrl"]
+    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
   }
 ]
