--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,10 @@
     package="com.xseec.eds">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".util.EDSApplication"
@@ -33,6 +31,15 @@
             android:name=".service.ComService"
             android:enabled="true"
             android:exported="true" />
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.xseec.eds.PhotoPickerProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths"/>
+        </provider>
 
         <activity android:name=".activity.ChartActivity" />
         <activity
@@ -57,8 +64,11 @@
             android:name=".activity.VerificationCodeActivity"
             android:label="@string/title_activity_verification_code"
             android:theme="@style/DialogActivity"
-            android:windowSoftInputMode="adjustResize"></activity>
-        <activity android:name=".activity.WorkorderCreatorActivity">
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".activity.WorkorderCreatorActivity"></activity>
+        <activity android:name=".activity.WorkorderActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/TransStatusBarTheme">
         </activity>
     </application>
 
