--- a/app/src/main/res/raw/device_config.json
+++ b/app/src/main/res/raw/device_config.json
@@ -96,7 +96,7 @@
       {"Name":"Ie","Items":[]},
       {"Name":"CtrlMode","Items":[]},
       {"Name":"CtrlCode","Items":[]},
-      {"Name":"Switch","Items":["","","","","","","","","Isd","Ii","","Ig","Tsd","Tg"]},
+      {"Name":"Switch","Items":["","","","","","","","","Isd","Ii","","Ig","Tsd_negate","Tg_negate"]},
       {"Name":"Ir","Items":[0.4,0.44,0.48,0.52,0.56,0.6,0.64,0.68,0.72,0.76,0.8,0.85,0.9,0.95,1],"Unit":"xIe"},
       {"Name":"Tr","Items":[20,40,60,80,160],"Unit":"s"},
       {"Name":"Isd","Items":[2,3,4,5,6,7,8,9,10,"off"],"Unit":"xIr"},
