--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.xseec.eds"
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
@@ -40,10 +40,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'org.litepal.android:core:2.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-    implementation 'com.youth.banner:banner:1.4.9'
     implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
     implementation 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
     implementation 'top.zibin:Luban:1.1.8'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
-    }
+    implementation 'com.qianwen:update-app:3.5.2'
+    implementation 'com.zhy:okhttputils:2.6.2'
+}
