--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".util.EDSApplication"
@@ -31,6 +32,7 @@
             android:name=".service.ComService"
             android:enabled="true"
             android:exported="true" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.xseec.eds.PhotoPickerProvider"
@@ -38,7 +40,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths"/>
+                android:resource="@xml/filepaths" />
         </provider>
 
         <activity android:name=".activity.ChartActivity" />
@@ -65,13 +67,20 @@
             android:label="@string/title_activity_verification_code"
             android:theme="@style/DialogActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activity.WorkorderCreatorActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"></activity>
-        <activity android:name=".activity.WorkorderActivity"
-            android:windowSoftInputMode="adjustPan"
+        <activity
+            android:name=".activity.WorkorderCreatorActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".activity.WorkorderActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@style/TransStatusBarTheme"
-            android:configChanges="keyboardHidden|orientation|screenSize">
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
+
+        <receiver
+            android:name=".broadcast.NetworkChangeReceiver"
+            android:enabled="true"
+            android:exported="true">
+        </receiver>
     </application>
 
 </manifest>
