--- a/app/src/main/res/raw/device_config.json
+++ b/app/src/main/res/raw/device_config.json
@@ -2,7 +2,7 @@
   {
     "Type":"A1",
     "Name":"ACB",
-    "Overview":["State","Ir","IdA","IdB","IdC","TripDH","TripMS","TripYM"],
+    "Overview":["State","Status","Ir","IdA","IdB","IdC"],
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":["Ua","Ub","Uc"],
@@ -24,12 +24,13 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,1,"off"],"Unit":"Ie"},
       {"Name":"Tg","Items":["(I2t on)0.8","(I2t on)0.4","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.4","(I2t off)0.8"],"Unit":"s"}
     ],
-    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
+    "Control":["State","Status","CtrlMode","CtrlCode","FarCtrl"],
+    "Alarm":["Ia","Ib","Ic","Ir"]
   },
   {
     "Type":"A2",
     "Name":"ACB",
-    "Overview":["State","Ir","IdA","IdB","IdC","TripDH","TripMS","TripYM"],
+    "Overview":["State","Status","Ir","IdA","IdB","IdC"],
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":["Ua","Ub","Uc"],
@@ -51,12 +52,13 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,1,"off"],"Unit":"Ie"},
       {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
-    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
+    "Control":["State","Status","CtrlMode","CtrlCode","FarCtrl"],
+    "Alarm":["Ia","Ib","Ic","Ir"]
   },
   {
     "Type":"A3",
     "Name":"ACB",
-    "Overview":["State","Ir","IdA","IdB","IdC","TripDH","TripMS","TripYM"],
+    "Overview":["State","Status","Ir","IdA","IdB","IdC"],
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":["Ua","Ub","Uc","Uab","Ubc","Uca"],
@@ -78,12 +80,13 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,1,"off"],"Unit":"Ie"},
       {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
-    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
+    "Control":["State","Status","CtrlMode","CtrlCode","FarCtrl"],
+    "Alarm":["Ia","Ib","Ic","Ir"]
   },
   {
     "Type":"M2",
     "Name":"MCCB",
-    "Overview":["State","IrReal","IdA","IdB","IdC","TripDH","TripMS","TripYM"],
+    "Overview":["State","Status","IrReal","IdA","IdB","IdC"],
     "Real":{
       "Current":["Ia","Ib","Ic","In","Igf"],
       "Voltage":[],
@@ -105,6 +108,7 @@
       {"Name":"Ig","Items":[0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1,"off"],"Unit":"xIe"},
       {"Name":"Tg","Items":["(I2t on)0.4","(I2t on)0.3","(I2t on)0.2","(I2t on)0.1","(I2t off)0.1","(I2t off)0.2","(I2t off)0.3","(I2t off)0.4"],"Unit":"s"}
     ],
-    "Control":["State","CtrlMode","CtrlCode","FarCtrl"]
+    "Control":["State","Status","CtrlMode","CtrlCode","FarCtrl"],
+    "Alarm":["Ia","Ib","Ic","IrReal"]
   }
 ]
