工单、异常、操作筛选

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
             android:theme="@style/DialogActivity"/>
         <activity android:name=".activity.ReportActivity"/>
 
+        <activity android:name=".activity.FilterActivity"/>
     </application>
 
 </manifest>
