自定义整合

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,7 @@
             android:theme="@style/DialogActivity"/>
 
         <activity android:name=".activity.FilterActivity"/>
+        <activity android:name=".activity.SettingActivity"/>
     </application>
 
 </manifest>
